Home layout and style almost complete. JS menu and card toggle complete. To add carousel and related styles.

--- a/index.html
+++ b/index.html
@@ -52,45 +52,45 @@
     <div class="tabs">
       <div class="card">
         <div class="tab-links">
-          <a class="tab-link tab-link-selected" data-tab="feature">Features</a>
+          <a class="tab-link active" data-tab="feature">Features</a>
           <a class="tab-link" data-tab="testimonial">Testimonials</a>
         </div>
         <span class="arrow prev fas fa-chevron-circle-left"></span>
         <div class="tab-items">
           <h1 class="call-tag" data-tab="feature">How can ImmuTrack help you?</h1>
-          <article class="tab-item tab-item-selected" data-tab="feature">
-            <h1>Lorem Ipsum</h1>
+          <article class="tab-item active" data-tab="feature">
+            <h1>Lorem Ipsum F1</h1>
             <div class="image"></div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, porro minus enim sint accusamus totam!</p>
             <a href="#">See More</a>
           </article>
           <article class="tab-item" data-tab="feature">
-            <h1>Lorem Ipsum</h1>
+            <h1>Lorem Ipsum F2</h1>
             <div class="image"></div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, porro minus enim sint accusamus totam!</p>
             <a href="#">See More</a>
           </article>
           <article class="tab-item" data-tab="feature">
-            <h1>Lorem Ipsum</h1>
+            <h1>Lorem Ipsum F3</h1>
             <div class="image"></div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, porro minus enim sint accusamus totam!</p>
             <a href="#">See More</a>
           </article>
           <h1 class="call-tag" data-tab="testimonial">Check out what these people had to say!</h1>
-          <article class="tab-item tab-item-selected" data-tab="testimonial">
-            <h1>LOREM IPSUM</h1>
+          <article class="tab-item active" data-tab="testimonial">
+            <h1>LOREM IPSUM T1</h1>
             <div class="image"></div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, porro minus enim sint accusamus totam!</p>
             <a href="#">See More</a>
           </article>
           <article class="tab-item" data-tab="testimonial">
-            <h1>LOREM IPSUM</h1>
+            <h1>LOREM IPSUM T2</h1>
             <div class="image"></div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, porro minus enim sint accusamus totam!</p>
             <a href="#">See More</a>
           </article>
           <article class="tab-item" data-tab="testimonial">
-            <h1>LOREM IPSUM</h1>
+            <h1>LOREM IPSUM T3</h1>
             <div class="image"></div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, porro minus enim sint accusamus totam!</p>
             <a href="#">See More</a>
@@ -100,7 +100,7 @@
       </div>
     </div>
 
-    <footer>
+    <footer class="card">
       <p>&copy; <span class="copyright">ImmuTrack YEAR</span></p>
     </footer>
   </body>
