home page mobile, phablet, tablet, and desktop views are complete. JS wired up and fully functional. more pages inbound.

--- a/index.html
+++ b/index.html
@@ -13,20 +13,22 @@
 
   <body class="home">
     <header class="nav-bar">
-      <p class="open fa fa-bars"><span>Menu</span></p>
-      <h1 class="branding"><i class="fas fa-syringe"></i>ImmuTrack</h1>
-      <ul class="nav-links">
-        <a href="./index.html"><li>Home</li></a>
-        <a href="#"><li>Features</li></a>
-        <a href="#"><li>Stories</li></a>
-        <a href="#"><li>Our Team</li></a>
-        <a class="contact" href="#">
-          <li><i class="far fa-envelope"></i></li>
-        </a>
-      </ul>
-      <div class="action-buttons">
-        <a href="#" class="join join-button">Join</a>
-        <a href="https://confident-bardeen-cd396a.netlify.com/login">Login</a>
+      <div class="container">
+        <p class="open fa fa-bars"><span>Menu</span></p>
+        <h1 class="branding"><i class="fas fa-syringe"></i>ImmuTrack</h1>
+        <ul class="nav-links">
+          <a href="./index.html"><li>Home</li></a>
+          <a href="#"><li>Features</li></a>
+          <a href="#"><li>Stories</li></a>
+          <a href="#"><li>Our Team</li></a>
+          <a class="contact" href="#">
+            <li><i class="far fa-envelope"></i></li>
+          </a>
+        </ul>
+        <div class="action-buttons">
+          <a href="#" class="join join-button">Join</a>
+          <a href="https://confident-bardeen-cd396a.netlify.com/login">Login</a>
+        </div>
       </div>
     </header>
 
