--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Immunization Tracker</title>
+    <title>ImmuTrack | Home</title>
 
     <link rel="stylesheet" href="css/index.css" />
 
@@ -17,10 +17,10 @@
         <p class="open fa fa-bars"><span>Menu</span></p>
         <h1 class="branding"><i class="fas fa-syringe"></i>ImmuTrack</h1>
         <ul class="nav-links">
-          <a href="./index.html"><li>Home</li></a>
+          <a class="active" href="./index.html"><li>Home</li></a>
           <a href="#"><li>Features</li></a>
           <a href="#"><li>Stories</li></a>
-          <a href="#"><li>Our Team</li></a>
+          <a href="./about.html"><li>Our Team</li></a>
           <a class="contact" href="#">
             <li><i class="far fa-envelope"></i></li>
           </a>
@@ -53,7 +53,7 @@
         <h1 class="branding"><i class="fas fa-syringe"></i>ImmuTrack</h1>
       </div>
       <ul class="nav-links">
-        <a href="./index.html"><li>Home</li></a>
+        <a class="active" href="./index.html"><li>Home</li></a>
         <a href="#"><li>Features</li></a>
         <a href="#"><li>Stories</li></a>
         <a href="#"><li>Our Team</li></a>
@@ -97,21 +97,45 @@
         <div class="card carousel active" data-tab="feature">
           <h1 class="call-tag">How can ImmuTrack help you?</h1>
           <article class="slide active" data-tab="feature">
-            <h1>Lorem Ipsum F1</h1>
-            <div class="image"></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, porro minus enim sint accusamus totam!</p>
+            <h1>Less Stress</h1>
+            <div class="image happy-feeling"></div>
+            <p>We can help you minimize your personal workload and remove a potential hassle from your daily life by using our service for record keeping.</p>
             <a href="#">See More</a>
           </article>
           <article class="slide" data-tab="feature">
-            <h1>Lorem Ipsum F2</h1>
-            <div class="image"></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, porro minus enim sint accusamus totam!</p>
+            <h1>More Free Time</h1>
+            <div class="image accept-request"></div>
+            <p>We can help you increase your efficiency during time consuming tasks, such as getting approval for travel visas.</p>
             <a href="#">See More</a>
           </article>
           <article class="slide" data-tab="feature">
-            <h1>Lorem Ipsum F3</h1>
-            <div class="image"></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, porro minus enim sint accusamus totam!</p>
+            <h1>Improved Quality of Care</h1>
+            <div class="image file-bundle"></div>
+            <p>We can help you improve the quality of your care through the confidence that transparency information brings to your medical care.</p>
+            <a href="#">See More</a>
+          </article>
+          <article class="slide" data-tab="feature">
+            <h1>Healthy & Happy Children</h1>
+            <div class="image blooming"></div>
+            <p>We can help you easily maintain records for all of your children in a secure, easy-to-reach, service that can even reduce the strain of things like moving to a new provider.</p>
+            <a href="#">See More</a>
+          </article>
+          <article class="slide" data-tab="feature">
+            <h1>Streamlined Workflow</h1>
+            <div class="image timeline"></div>
+            <p>We can help you streamline your workflow through the removal of standard physical document transfer methods.</p>
+            <a href="#">See More</a>
+          </article>
+          <article class="slide" data-tab="feature">
+            <h1>Increased Efficiency</h1>
+            <div class="image setup-wizard"></div>
+            <p>We can help you increase office efficiency through the removal of extra processes and procedures.</p>
+            <a href="#">See More</a>
+          </article>
+          <article class="slide" data-tab="feature">
+            <h1>Greater Confidence</h1>
+            <div class="image online-friends"></div>
+            <p>You can improve the quality of care provided to your patients by giving them a boost of confidence through transparency.</p>
             <a href="#">See More</a>
           </article>
           <span class="arrow prev fas fa-chevron-circle-left" data-tab="feature"></span>
@@ -120,21 +144,59 @@
         <div class="card carousel" data-tab="testimonial">
           <h1 class="call-tag">Check out what these people had to say!</h1>
           <article class="slide active" data-tab="testimonial">
-            <h1>LOREM IPSUM T1</h1>
-            <div class="image"></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, porro minus enim sint accusamus totam!</p>
+            <div class="image testimonial guillermo"></div>
+            <blockquote>
+              <p>Using ImmuTrack has greatly improved my quality of life!</p>
+              <footer>— Guillermo Malo</footer>
+            </blockquote>
             <a href="#">See More</a>
           </article>
           <article class="slide" data-tab="testimonial">
-            <h1>LOREM IPSUM T2</h1>
-            <div class="image"></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, porro minus enim sint accusamus totam!</p>
+            <div class="image testimonial marty"></div>
+            <blockquote>
+              <p>The process is quick and painless.</p>
+              <footer>— Marty Vessels</footer>
+            </blockquote>
             <a href="#">See More</a>
           </article>
           <article class="slide" data-tab="testimonial">
-            <h1>LOREM IPSUM T3</h1>
-            <div class="image"></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, porro minus enim sint accusamus totam!</p>
+            <div class="image testimonial michaela"></div>
+            <blockquote>
+              <p>ImmuTrack has made things so much easier for me.</p>
+              <footer>— Michaela Amadeus</footer>
+            </blockquote>
+            <a href="#">See More</a>
+          </article>
+          <article class="slide" data-tab="testimonial">
+            <div class="image testimonial matheus"></div>
+            <blockquote>
+              <p>ImmuTrack saved out wedding plans!</p>
+              <footer>— Matheus Ferrari</footer>
+            </blockquote>
+            <a href="#">See More</a>
+          </article>
+          <article class="slide" data-tab="testimonial">
+            <div class="image testimonial han"></div>
+            <blockquote>
+              <p>Now I can’t imagine trying to handle all of this info without it.</p>
+              <footer>— Han Myo When</footer>
+            </blockquote>
+            <a href="#">See More</a>
+          </article>
+          <article class="slide" data-tab="testimonial">
+            <div class="image testimonial hyttalo"></div>
+            <blockquote>
+              <p>It has fundamentally changed the way our practice handles vaccinations.</p>
+              <footer>— Hyttalo Souzen</footer>
+            </blockquote>
+            <a href="#">See More</a>
+          </article>
+          <article class="slide" data-tab="testimonial">
+            <div class="image testimonial josh"></div>
+            <blockquote>
+              <p>I’m so thankful to have access to ImmuTrack.</p>
+              <footer>— Josh Rodrigo</footer>
+            </blockquote>
             <a href="#">See More</a>
           </article>
           <span class="arrow prev fas fa-chevron-circle-left" data-tab="testimonial"></span>
