home and about html, css, js complete. Moving to add some stretch and polish.

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
         <a href="./index.html"><li>Home</li></a>
         <a href="#"><li>Features</li></a>
         <a href="#"><li>Stories</li></a>
-        <a class="active" href="#"><li>Our Team</li></a>
+        <a class="active" href="./about.html"><li>Our Team</li></a>
         <a class="contact" href="#">
           <li><i class="far fa-envelope"></i></li>
         </a>
@@ -88,8 +88,12 @@
         <div class="bio">
           <h1 class="name">Eric SarragaLugo</h1>
           <h2 class="role">Web User Interface Developer</h2>
-          <p class="bio">Hey everyone! I'm Eric SarragaLugo. I'm a Full-Stack Software Developer enrolled at Lambda School to make a way for a better tomorrow. Although I'm still new to development, I'm moving forward quickly and I have a passion for learning new technologies and techniques</p>
-          <div class="social-media"></div>
+          <p class="bio">Hey everyone! I'm Eric SarragaLugo. I'm a Full-Stack Software Developer enrolled at Lambda School to make a way for a better tomorrow. Although I'm still new to development, I'm moving forward quickly and I have a passion for learning new technologies and techniques!</p>
+          <div class="social-media">
+            <a href="https://github.com/ericlugo"><i class="fab fa-github-alt"></i></a>
+            <a href="https://www.linkedin.com/in/eric-sarragalugo/"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://twitter.com/ericthelugo"><i class="fab fa-twitter"></i></a>
+          </div>
         </div>
       </section>
       <section class="card member">
@@ -97,8 +101,10 @@
         <div class="bio">
           <h1 class="name">Shobhita Vaishnav</h1>
           <h2 class="role">Web User Interface Developer</h2>
-          <p class="bio">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti aperiam sunt nesciunt dicta iusto, neque laboriosam voluptate exercitationem atque eaque?</p>
-          <div class="social-media"></div>
+          <p class="bio">I am Shobhita Vaishnav,living in Pleasanton ,CA. I am currently learning technologies which would help me become a fullstack developer. My current technologies are HTML,CSS and Javascript. I am a self learner and always looking for opportunities to improve myself.</p>
+          <div class="social-media">
+            <a href="www.github.com/shobhitav"><i class="fab fa-github-alt"></i></a>
+          </div>
         </div>
       </section>
       <section class="card member">
@@ -108,8 +114,9 @@
           <h2 class="role">Web User Interface Developer</h2>
           <p class="bio">I work as a product marketer with tech start ups, write in my free time and I'm learning to code at Lambda.</p>
           <div class="social-media">
-            <a href="https://twitter.com/SachinB91"><i class="fab fa-twitter"></i></a>
+            <a href="https://github.com/sachben91"><i class="fab fa-github-alt"></i></a>
             <a href="https://medium.com/@sachinbenny/"><i class="fab fa-medium-m"></i></a>
+            <a href="https://twitter.com/SachinB91"><i class="fab fa-twitter"></i></a>
           </div>
         </div>
       </section>
@@ -120,8 +127,8 @@
           <h2 class="role">Front End Architect</h2>
           <p class="bio">I am Dionuta Burton I also go by “Tay”. I am a young developer who has a hunger for learning. I’m currently focusing on learning technologies to become a Full Stack Web Developer. I am currently fully competent in front end web development and some back end development.</p>
           <div class="social-media">
-            <a href="https://www.linkedin.com/in/dionuta-burton/"><i class="fab fa-linkedin-in"></i></a>
             <a href="https://github.com/Dionuta"><i class="fab fa-github-alt"></i></a>
+            <a href="https://www.linkedin.com/in/dionuta-burton/"><i class="fab fa-linkedin-in"></i></a>
           </div>
         </div>
       </section>
@@ -141,8 +148,11 @@
         <div class="bio">
           <h1 class="name">Edward Reeseg</h1>
           <h2 class="role">Backend Architect</h2>
-          <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id in cupiditate neque suscipit inventore vitae velit ab ut a dolorum.</p>
-          <div class="social-media"></div>
+          <p class="bio">I'm a full-stack web developer with an interest in client-centered UX/UI implementation and efficient back-end performance. I'm a motivated self-starter and father of two, always looking for any opportunity to grow, learn, and improve.</p>
+          <div class="social-media">
+            <a href="https://github.com/edreeseg"><i class="fab fa-github-alt"></i></a>
+            <a href="https://www.linkedin.com/in/edward-reeseg-30a8b284/"><i class="fab fa-linkedin-in"></i></a>
+          </div>
         </div>
       </section>
       <section class="card member">
@@ -150,8 +160,10 @@
         <div class="bio">
           <h1 class="name">Ronald Libago</h1>
           <h2 class="role">Team Lead</h2>
-          <p class="bio">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab perferendis placeat neque? Incidunt rerum doloremque nostrum? Quia aut hic pariatur!</p>
-          <div class="social-media"></div>
+          <!-- <p class="bio">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab perferendis placeat neque? Incidunt rerum doloremque nostrum? Quia aut hic pariatur!</p> -->
+          <div class="social-media">
+            <a href="https://github.com/Mister-Corn"><i class="fab fa-github-alt"></i></a>
+          </div>
         </div>
       </section>
     </article>
