--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <a class="active" href="./index.html"><li>Home</li></a>
         <a href="#"><li>Features</li></a>
         <a href="#"><li>Stories</li></a>
-        <a href="#"><li>Our Team</li></a>
+        <a href="./about.html"><li>Our Team</li></a>
         <a class="contact" href="#">
           <li><i class="far fa-envelope"></i></li>
         </a>
@@ -144,7 +144,9 @@
         <div class="card carousel" data-tab="testimonial">
           <h1 class="call-tag">Check out what these people had to say!</h1>
           <article class="slide active" data-tab="testimonial">
-            <div class="image testimonial guillermo"></div>
+            <div class="image">
+              <span class="testimonial guillermo"></span>
+            </div>
             <blockquote>
               <p>Using ImmuTrack has greatly improved my quality of life!</p>
               <footer>— Guillermo Malo</footer>
@@ -152,7 +154,9 @@
             <a href="#">See More</a>
           </article>
           <article class="slide" data-tab="testimonial">
-            <div class="image testimonial marty"></div>
+            <div class="image">
+              <span class="testimonial marty"></span>
+            </div>
             <blockquote>
               <p>The process is quick and painless.</p>
               <footer>— Marty Vessels</footer>
@@ -160,7 +164,9 @@
             <a href="#">See More</a>
           </article>
           <article class="slide" data-tab="testimonial">
-            <div class="image testimonial michaela"></div>
+            <div class="image">
+              <span class="testimonial michaela"></span>
+            </div>
             <blockquote>
               <p>ImmuTrack has made things so much easier for me.</p>
               <footer>— Michaela Amadeus</footer>
@@ -168,15 +174,19 @@
             <a href="#">See More</a>
           </article>
           <article class="slide" data-tab="testimonial">
-            <div class="image testimonial matheus"></div>
+            <div class="image">
+              <span class="testimonial matheus"></span>
+            </div>
             <blockquote>
-              <p>ImmuTrack saved out wedding plans!</p>
+              <p>ImmuTrack saved our wedding plans!</p>
               <footer>— Matheus Ferrari</footer>
             </blockquote>
             <a href="#">See More</a>
           </article>
           <article class="slide" data-tab="testimonial">
-            <div class="image testimonial han"></div>
+            <div class="image">
+              <span class="testimonial han"></span>
+            </div>
             <blockquote>
               <p>Now I can’t imagine trying to handle all of this info without it.</p>
               <footer>— Han Myo When</footer>
@@ -184,7 +194,9 @@
             <a href="#">See More</a>
           </article>
           <article class="slide" data-tab="testimonial">
-            <div class="image testimonial hyttalo"></div>
+            <div class="image">
+              <span class="testimonial hyttalo"></span>
+            </div>
             <blockquote>
               <p>It has fundamentally changed the way our practice handles vaccinations.</p>
               <footer>— Hyttalo Souzen</footer>
@@ -192,7 +204,9 @@
             <a href="#">See More</a>
           </article>
           <article class="slide" data-tab="testimonial">
-            <div class="image testimonial josh"></div>
+            <div class="image">
+              <span class="testimonial josh"></span>
+            </div>
             <blockquote>
               <p>I’m so thankful to have access to ImmuTrack.</p>
               <footer>— Josh Rodrigo</footer>
